sec commit sec commit  On branch master

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   <!-- ! start nav section -->
   <nav class="navbar navbar-expand-lg navbar-light ">
-    <div class="container-fluid inner-nav">
+    <div class="container inner-nav">
       <div class="left-nav d-flex justify-content-start align-items-center gap-1">
         <div class="img-div">
           <img src="./img/logo-sm.png" alt="all games">
@@ -97,7 +97,7 @@
   </main>
 
   <div class="desc-layer d-none">
-    <div class="container d-flex g-3 justify-content-between">
+    <div class="container d-flex g-3 justify-content-between flex-wrap">
       <div class="left me-2">
         <h4>
           details game
@@ -132,7 +132,7 @@
         <a class="btn btn-outline-warning text-white" href="">Show game</a>
       </div>
     </div>
-    <button class="btn-close btn-close-white" id="btnClose"></button>
+    <button class="btn-close btn-close-white me-5" id="btnClose"></button>
   </div>
 
 
