--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-mmorpg" role="tabpanel" aria-labelledby="pills-all-tab"
           tabindex="0">
+
           <div class="row cards-display row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
 
           </div>
@@ -137,7 +138,11 @@
 
 
 
-
+  <div class="press-msg d-none">
+    <p>
+        press on the image to further information
+    </p>
+  </div>
 
 
 
